name:                 prepare-ghcjs
version:              0.1.0.0
synopsis:             
-- description:
license:              BSD3
license-file:         LICENSE
homepage:             
author:               Marcin Tolysz
maintainer:           tolysz@gmail.com
category:             
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

--default-extensions: OverloadedStrings

library
  hs-source-dirs:       lib
  exposed-modules: PrepGhcJS.Network.Utils
                   PrepGhcJS.Shell.Utils
                   PrepGhcJS.Cabal.Utils
                   PrepGhcJS.Types
                   PrepGhcJS.Utils
  build-depends: base
               , http-conduit
               , conduit
               , bytestring
               , transformers
               , time
               , directory
               , http-client
               , gitlib
               , turtle
               , text
               , Cabal
               , rawstring-qm
  default-language: Haskell2010
  other-extensions: OverloadedStrings

executable prepare-ghcjs
  main-is:              Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5
                      , prepare-ghcjs
                      , turtle
                      , text
                      , rawstring-qm
                      , system-filepath
  hs-source-dirs:       src
  default-language:     Haskell2010
